amino/parser/rules_grammar.abnf
;; Amino Runtime Expression Grammar

;; Top level expression
expression      = boolean-expr

;; Boolean expressions
boolean-expr    = comparison *( boolean-op comparison )
boolean-op      = "and" / "or"

;; Comparisons
comparison      = value-expr *( comparison-op value-expr )
comparison-op   = "=" / "!=" / ">" / "<" / ">=" / "<=" / "in" / "not in"

;; Values and identifiers
value-expr      = identifier / literal / function-call / nested-identifier
nested-identifier = identifier *( "." identifier )

;; Function calls
function-call   = identifier "(" [ arg-list ] ")"
arg-list        = value-expr *( "," value-expr )

;; Literals
literal         = number / string / boolean / list-literal
number          = [ "-" ] 1*DIGIT [ "_" 1*DIGIT ] [ "." 1*DIGIT ]
string          = "'" *CHAR "'" / DQUOTE *CHAR DQUOTE
boolean         = "true" / "false"
list-literal    = "[" [ value-expr *( "," value-expr ) ] "]"

;; Identifiers
identifier      = ALPHA *(ALPHA / DIGIT / "_")

;; Core tokens
ALPHA           = %x41-5A / %x61-7A   ; A-Z / a-z
DIGIT           = %x30-39             ; 0-9
CHAR            = %x20-21 / %x23-7E   ; Any char except quotes
DQUOTE          = %x22                ; "
